kubernetes/apps/main/joomla/policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: joomla
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-local-access
  namespace: joomla
spec:
  podSelector: {}
  egress:
    - to:
        # Only allow egress to internet
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.42.0.0/16
              - 10.43.0.0/16
              - 192.168.0.0/16
        - ipBlock:
            cidr: ::/0
            except:
              - fdd5:aa8:9535:42::/108
              - fdd5:aa8:9535:43::/108
              - fdd5:aa8:9535::/48
        # and the database
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mariadb
              app.kubernetes.io/part-of: joomla
  policyTypes:
    - Egress
